--- a/src/App.css
+++ b/src/App.css
@@ -5,28 +5,28 @@ body {
   text-align: center;
 }
 
-body #container {
+body {
   display: flex;
   height: 100vh;
   justify-content: center;
   align-items: center;
 }
 
-body #container .main-title {
-  font-size: 50px;
+body .main-title {
+  font-size: 100px;
   margin-bottom: 20px;
 }
-body #container .length-control {
+body .length-control {
   width: 250px;
 }
-body #container button {
+body button {
   background: none;
   outline: none;
   border: none;
   color: white;
   cursor: pointer;
 }
-body #container .btn-level,
+body .btn-level,
 .length-control {
   display: inline-block;
 }
@@ -35,7 +35,7 @@ body #container .btn-level,
   width: 40px;
 }
 
-body #container .timer {
+body .timer {
   border: 7px solid #13353a;
   margin: 20px auto 10px auto;
   width: 270px;
@@ -62,7 +62,7 @@ body #container .timer {
 }
 
 @media screen and (max-width: 500px) {
-  #container {
+   {
     transform: scale(0.8);
     -webkit-transform: scale(0.8);
     -moz-transform: scale(0.8);
