--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,6 @@ body {
   color: white;
   font-size: 30px;
   text-align: center;
-}
-
-body {
   display: flex;
   height: 100vh;
   justify-content: center;
@@ -16,6 +13,7 @@ body .main-title {
   font-size: 100px;
   margin-bottom: 20px;
 }
+
 body .length-control {
   width: 250px;
 }
@@ -36,7 +34,7 @@ body .btn-level,
 }
 
 body .timer {
-  border: 7px solid #13353a;
+  border: 7px solid white;
   margin: 20px auto 10px auto;
   width: 270px;
   height: 160px;
@@ -53,20 +51,8 @@ body .timer {
   margin-left: -95px;
   margin-top: -57px;
 }
+
 #time-left {
   font-family: digital;
   font-size: 80px;
-}
-.timer-control button:active {
-  color: #13353a;
-}
-
-@media screen and (max-width: 500px) {
-   {
-    transform: scale(0.8);
-    -webkit-transform: scale(0.8);
-    -moz-transform: scale(0.8);
-    -ms-transform: scale(0.8);
-    -o-transform: scale(0.8);
-  }
 }
